--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,17 @@
-<h1>Make your form here</h1>
+<h1>Sign here!</h1>
+
+  <form action="/pirates" method="POST">
+
+    <label for="pirate_name">Pirate Name: <input type="text" name="pirate[name]"></label>
+    <label for="pirate_weight">Pirate Weight: <input type="text" name="pirate[weight]"></label>
+    <label for="pirate_height">Pirate Height: <input type="text" name="pirate[height]"></label>
+    <label for="ship_name">Ship Name: <input id="ship_name_1" type="text" name="pirate[ships][][name]"></label>
+    <label for="ship_type">Ship Type: <input id="ship_type_1" type="text" name="pirate[ships][][type]"></label>
+    <label for="ship_booty">Ship Booty: <input id="ship_booty_1" type="text" name="pirate[ships][][booty]"></label>
+    <label for="ship_name">Ship Name: <input id="ship_name_2" type="text" name="pirate[ships][][name]"></label>
+    <label for="ship_type">Ship Type: <input id="ship_type_2" type="text" name="pirate[ships][][type]"></label>
+    <label for="ship_booty">Ship Booty: <input id="ship_booty_2" type="text" name="pirate[ships][][booty]"></label>
+
+    <input type="submit" value="Submit">
+
+  </form>
