--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,17 +1,22 @@
 
-<h1>Display your Pirate here</h1>
-
+<h1>Pirate</h1>
 <div class="pirate">
-  <h3>Name: <%= @pirate.name %></h3>
-  <h4>Weight: <%= @pirate.weight %></h4>
-  <h4>Height: <%= @pirate.height %></h4>
+  <h2>Name: <%= @pirate.name %></h2><br>
+  <h2>Weight: <%= @pirate.weight %></h2><br>
+  <h2>Height: <%= @pirate.height %></h2><br>
 </div>
 
-<h1>Display Your Ships:</h1>
 
-<% @ships.each do |ship|%>
+<h2>First Ship</h2>
   <div class="ship">
-    <h3>Name: <%=ship.name%></h3>
-    <h4>Type: <%=ship.type%></h4>
-    <h4>Booty: <%=ship.booty%></h4>
+    <p>Name: <%= @ships[0].name %></p><br>
+    <p>Type: <%= @ships[0].type %></p><br>
+    <p>Booty: <%= @ships[0].booty %></p><br>
+  </div>
+
+<h2>Second Ship</h2>
+  <div class="ship">
+    <p>Name: <%= @ships[1].name %></p><br>
+    <p>Type: <%= @ships[1].type %></p><br>
+    <p>Booty: <%= @ships[1].booty %></p><br>
   </div>
